--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-config": "^1.5.2",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
